rpi5/sonarr/oauth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-proxy
  labels:
    app: oauth-proxy
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-proxy
  template:
    metadata:
      name: oauth-proxy
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: oauth-proxy
    spec:
      imagePullSecrets:
        - name: docker-regcred
      containers:
        - name: oauth-proxy
          image: dhi.io/oauth2-proxy:7.15.5-debian13@sha256:2cadd1f3c20bd0464ab226139968cf165e3843830ab438541b449a2e27b0a630
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4180
              protocol: TCP
          livenessProbe:
            httpGet:
              port: 4180
              path: /ping
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              port: 4180
              path: /ready
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 10m
            limits:
              memory: 64Mi
          securityContext:
            runAsUser: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-auth
spec:
  selector:
    app: oauth-proxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4180
  type: ClusterIP
